<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/open_history_item"
        android:icon="@drawable/ic_baseline_history_24"
        android:orderInCategory="10"
        android:title="@string/history_menu_item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_history_item"
        android:icon="@drawable/ic_search_history"
        android:orderInCategory="20"
        android:title="@string/search_history_menu_item"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/stopwatch_item"
        android:icon="@drawable/ic_stopwatch"
        android:orderInCategory="30"
        android:title="@string/stopwatch_menu_item"
        app:showAsAction="ifRoom" />
</menu>
